forked from gitolite@sim:f.fuchs/masterthesis

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,14 @@
-*aux
-*log
-*lot
-*log
-*synctex.gz
-masterarbeit-florian-fuchs.pdf
+*.aux
+*.log
+*.lot
+*.log
+*.out
+*.gz
+*.toc
+*~
+masterarbeit-erik-lorenz.pdf
+*.blg
+*.dvi
+*.lof
+*.ps
+.*.swp
